# gn-build

./: .gitattributes  .gitignore  .gitmodules  CODEOWNERS  LICENSE  README.md  build-tools.py  gn.py  ninja.py
example/: BUILD.gn  BUILDCONFIG.gn  README.md
example/msvc/: BUILD.gn
example/toolchains/clang/: BUILD.gn
example/toolchains/gcc/: BUILD.gn
